--- a/example1/test1.html
+++ b/example1/test1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel = "stylesheet" href="test1.css" style type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
   <body>
    <div class="header">
@@ -16,7 +17,7 @@
        <div class="right">
            <p class="tel">+7(499)777-77-77</p>
            <p class="tel">+7(499)777-77-77</p>
-           <a href="#" id="connection">Обратная связь</a>
+           <a href="#" id="feedback">Обратная связь</a>
        </div>
        </div>
    </div>
@@ -33,7 +34,45 @@
             <div class="slide1"></div>
             <div class="slide2"></div>
             <div class="slide3"></div>    
-</div>
+        </div>
+    <div class="catalog">
+      <div class="link">
+       <a href="#">Главная</a>/
+       <a href="#">Каталог</a>/
+       <a href="#">Бытовая техника</a>  
+      </div>
+        <div class="leftblock">
+            <ul>
+                <li><a href="#" class="linkLeft">Автомобили</a></li>
+                <li><a href="#" class="linkLeft">Бытовая техника</a>
+                <ul class="second">
+                    <li><a href="#">Микроволновки</a></li>
+                    <li><a href="#">Холодильники</a></li>
+                    <li><a href="#">Посудомоечные машины</a></li>
+                    <li><a href="#">Чайники</a></li>
+                </ul>
+                </li>
+                <li><a href="#" class="linkLeft">Мобильная техника</a></li>
+                <li><a href="#" class="linkLeft">Компьютеры</a></li>
+                <li><a href="#" class="linkLeft">Одежда</a></li>
+                <li><a href="#" class="linkLeft">Недвижимость</a></li>
+            </ul>
+            <div class="priсe">
+             <img src="image/iconexcel.png" class="excel">
+             <span class="price-list">Прайс-лист</span>   
+            </div> 
+        </div>
+        <div class="centerblock">
+            <div class="article">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+            </div>
+
+        </div>
+    </div>    
      
   
 
