--- a/example1/test1.html
+++ b/example1/test1.html
@@ -64,11 +64,29 @@
         </div>
         <div class="centerblock">
             <div class="article">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
+                <div><img src="image/nophoto.png" class="nophoto">
+                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
+                <div><img src="image/nophoto.png" class="nophoto">
+                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
+                <div><img src="image/nophoto.png" class="nophoto">
+                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
+                <div><img src="image/nophoto.png" class="nophoto">
+                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
+                <div><img src="image/nophoto.png" class="nophoto">
+                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
+            </div>
+            <div class="pagination">
+               <div><a href="#">1</a></div>
+               <div><a href="#">2</a></div>
+               <div><a href="#">3</a></div>
+               <div><a href="#">4</a></div>
+               <div><a href="#">5</a></div>
+               <div><a href="#">6</a></div>
+               <div><a href="#">7</a></div>
+            </div>
+            <div class="text">
+                <p>Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. </p>
+                <p><br>Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</p>
             </div>
 
         </div>
