--- a/example1/test1.html
+++ b/example1/test1.html
@@ -88,8 +88,22 @@
                 <p>Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. </p>
                 <p><br>Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</p>
             </div>
-
         </div>
+    </div>
+    <div class="footer">
+       <div class="company_footer"><p>© 2012–2013 ЗАО «Компания» 
+info@name.ru</p></div>
+       <div class="link_footer">
+           <a href="#">Главная</a>
+           <a href="#">Каталог</a>
+           <a href="#">Доставка и оплата</a>
+           <a href="#">Прайс-лист</a>
+           <a href="#">Контакты</a>
+       </div>
+       <div class="pixel_footer">
+          <img src="image/company.png">
+           <a href="#"><span>Разработка сайта —</span> компания «Пиксель Плюс»</a>
+       </div>
     </div>    
      
   
