--- a/example1/test1.html
+++ b/example1/test1.html
@@ -16,34 +16,36 @@
        <h3>самая клевая компания</h3>
        </div>
        <div class="right">
-           <p class="tel">+7(499) 777-77-77</p>
-           <p class="tel">+7(499) 777-77-77</p>
-           <a href="#" id="feedback">Обратная связь</a><hr>
+           <p class="tel">+7(499) 777-77-77  +7(499) 777-77-77</p>
+           <a href="#" id="feedback">Обратная связь</a><hr class="underline_feedback"> 
        </div>
-       </div>
-      </header>
+     </div>
+    </header>
    <nav>
       <ul class="navigationContent">
           <li><a href="#">Главная</a><b>|</b></li>
           <li><a href="#">Каталог</a><b>|</b></li>
           <li><a href="#">Доставка и оплата</a><b>|</b></li>
           <li><a href="#">Прайс-лист</a><b>|</b></li>
-          <li><a href="#">Контакты</a></li>  
+          <li><a href="#">Контакты</a></li>   
       </ul>
    </nav>
         <div class="slides">
             <div class="slide1"></div>
             <div class="slide2"></div>
             <div class="slide3"></div>   
-        </div>
         <img src="image/right.png" class="direction_right">
-            <img src="image/left.png" class="direction_left">  
-             <ul class="link">
-       <li><a href="#">Главная</a><b>/</b></li>
-          <li><a href="#">Каталог</a> <b>/</b></li>
-          <li><a href="#">&nbsp;Бытовая техника</a></li>  
-              </ul>
-       <main>
+        <img src="image/left.png" class="direction_left">  
+      </div>
+   <section>
+             <div>
+                  <ul class="link">
+                  <li><a href="#">Главная</a><b>/</b></li>
+                  <li><a href="#">Каталог</a> <b>/</b></li>
+                  <li><a href="#">&nbsp;Бытовая техника</a></li>  
+                  </ul>
+           </div>
+      <div class="big">
         <aside>
             <ul>
                 <li><a href="#" class="linkLeft">Автомобили</a></li>
@@ -65,17 +67,17 @@
              <span class="price-list">Прайс-лист</span>   
             </div> 
         </aside>
-        <section>
+        <div class="centerBlock">
                 <article><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
+                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
                 <article><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
+                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
                 <article><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
-                <article class="top"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
-                <article class="top"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><h4>1 900 p.</h4><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
+                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
+                <article><img src="image/nophoto.png" class="noPhoto">
+                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
+                <article><img src="image/nophoto.png" class="noPhoto">
+                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></article>
             <ul class="pagination">
                <li><a href="#">1</a></li>
                <li><a href="#">2</a></li>
@@ -85,15 +87,16 @@
                <li><a href="#">6</a></li>
                <li><a href="#">7</a></li>
             </ul>
-            <div class="text">
-                <p>Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. </p>
-                <p><br><br><br>Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</p>
-            </div>
-        </section>
-      </main>
+            <hr class="line">
+            <div class="textLeft">
+                Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. </div>
+                <div class="textRight">Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</div>
+        </div>
+     </div>
+   </section>
     <footer>
-       <div class="company_footer"><p>© 2012–2013 ЗАО «Компания» 
-info@name.ru</p></div>
+       <div class="company_footer">© 2012–2013 ЗАО «Компания» 
+info@name.ru</div>
        <ul class="link_footer">
            <li><a href="#">Главная</a></li>
            <li><a href="#">Каталог</a></li>
