--- a/example1/test1.html
+++ b/example1/test1.html
@@ -34,12 +34,12 @@
    </nav>
         <div class="slides">
            <div class="parent_slaide">
-            <div class="slide1"></div>
-            <div class="slide2"></div>
-            <div class="slide3"></div>
+            <div class="slide1 cover" id="slide1"><img src="image/1.jpg"  class="size_picture"></div>
+            <div class="slide2 cover" id="slide2"><img src="image/2.jpg" class="size_picture"></div>
+            <div class="slide3 cover" id="slide3"><img src="image/3.jpg" class="size_picture"></div>
             <div class="direction">
-                <button id="direction_left" onclick="left"><img src="image/left.png"></button>  
-                <button id="direction_right" onclick="right"><img src="image/right.png"></button>
+                <button id="direction_left" onclick="prev()"><img src="image/left.png"></button>  
+                <button id="direction_right" onclick="next()"><img src="image/right.png"></button>
                </div>     
             </div>  
       </div>
