--- a/example1/test1.html
+++ b/example1/test1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,134 +6,126 @@
     <link rel = "stylesheet" href="test1.css" style type="text/css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <script src="test1.js" defer></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src='jquery.js' type='text/javascript'></script>
+    <script src="jquery-1.7.2.min.js"></script>
+<script src='jquery.js' defer></script>
 </head>
   <body>
    <header>
      <div class="content">
-     <div class="left">
-      <a href="/"><img src="image/logotip.png" alt="логотип" class="logo"></a>
+       <div class="left">
+         <a href="/"><img src="image/logotip.png" alt="логотип" class="logo"></a>
          <a href="/" class="left_logo_top" >Название компании</a>
          <h3><a href="/" class="left_logo_bottom" >самая клевая компания</a></h3>
-         </div>
-         
+       </div> 
        <div class="right">
-           <p class="tel">+7(499) 777-77-77  +7(499) 777-77-77</p>
-           <div id="fade"></div>
-           <a href="#" class="open_modal" id="callback">Обратная связь</a> 
-           <hr class="underline_feedback"> 
+         <p class="tel">+7(499) 777-77-77  +7(499) 777-77-77</p>
+         <div id="fade"></div>
+         <a href="#" class="open_modal" id="callback">Обратная связь</a> 
+         <hr class="underline_feedback"> 
        </div>
      </div>
-        <div id="modal_center">
-         <div id="grey">
-         <button id="close">x</button>
-       <form>
-        <p class="legend">ОБРАТНАЯ СВЯЗЬ</p>
-          Ваше имя<br><input type="text" name="name" class="input_text"><br>
-           Телефон<br><input type="text" name ="tel"class="input_text"><br>
-           Email<br><input type="text" name="email" class="input_text red" placeholder="Поле обязательно для заполнения"><br>
-           Сообщение<br><textarea name="text" class="sms"></textarea><br>
-           <input type="submit" value="Отправить" class="submit">
-       </form> 
-    </div>  
-       </div>
+          <div id="grey">
+            <button id="close">x</button>
+              <form>
+                <p class="legend">ОБРАТНАЯ СВЯЗЬ</p>
+                  <label>Ваше имя<br><input type="text" name="name" class="input_text"></label><br>
+                  <label>Телефон<br><input type="text" name ="tel" class="input_text"></label><br>
+                  <label>Email<br><input type="text" name="email" class="input_text red" placeholder="Поле обязательно для заполнения"></label><br>
+                  <label>Сообщение<br><textarea name="text" class="sms"></textarea></label><br>
+                <input type="submit" value="Отправить" class="submit">
+             </form> 
+          </div>    
     </header>
-   <nav>
-      <ul class="navigationContent">
+      <nav>
+        <ul class="navigationContent">
           <li><a href="#">Главная</a><b>|</b></li>
           <li><a href="#">Каталог</a><b>|</b></li>
           <li><a href="#">Доставка и оплата</a><b>|</b></li>
           <li><a href="#">Прайс-лист</a><b>|</b></li>
           <li><a href="#">Контакты</a></li>   
-      </ul>
-   </nav>
-        <div class="slides">
-           <div class="parent_slaide">
-            <div class="slide1 cover" id="slide1"><img src="image/1.jpg"  class="size_picture"></div>
-            <div class="slide2 cover" id="slide2"><img src="image/2.jpg" class="size_picture"></div>
-            <div class="slide3 cover" id="slide3"><img src="image/3.jpg" class="size_picture"></div>
-            <div class="direction">
-                <button id="direction_left" onclick="prev()"><img src="image/left.png"></button>  
-                <button id="direction_right" onclick="next()"><img src="image/right.png"></button>
-               </div>     
-            </div>  
+        </ul>
+      </nav>
+      <div id="slider-wrap">
+        <div id="slider">
+          <div class="slide"><img src="image/1.jpg" alt="slide"></div>
+          <div class="slide"><img src="image/2.jpg" alt="slide"></div>
+          <div class="slide"><img src="image/3.jpg" alt="slide"></div>
+        </div>
       </div>
    <section>
-             <div>
-                  <ul class="link">
-                  <li><a href="#">Главная</a><b>/</b></li>
-                  <li><a href="#">Каталог</a> <b>/</b></li>
-                  <li><a href="#">&nbsp;Бытовая техника</a></li>  
-                  </ul>
-           </div>
+     <div>
+       <ul class="link">
+         <li><a href="#">Главная</a><b>/</b></li>
+         <li><a href="#">Каталог</a> <b>/</b></li>
+         <li><a href="#">&nbsp;Бытовая техника</a></li>  
+       </ul>
+     </div>
       <div class="big">
         <aside>
             <ul>
-                <li><a href="#" class="linkLeft">Автомобили</a></li>
-                <li><a href="#" class="UnderlinkLeft">Бытовая техника</a>
-                <ul class="second">
-                    <li><a href="#">Микроволновки</a></li>
-                    <li><a href="#">Холодильники</a></li>
-                    <li><a href="#">Посудомоечные машины</a></li>
-                    <li><a href="#">Чайники</a></li>
-                </ul>
-                </li>
-                <li><a href="#" class="linkLeft">Мобильная техника</a></li>
-                <li><a href="#" class="linkLeft">Компьютеры</a></li>
-                <li><a href="#" class="linkLeft">Одежда</a></li>
-                <li><a href="#" class="linkLeft">Недвижимость</a></li>
+              <li><a href="#" class="linkLeft">Автомобили</a></li>
+              <li><a href="#" class="UnderlinkLeft">Бытовая техника</a>
+              <ul class="second">
+                <li><a href="#">Микроволновки</a></li>
+                <li><a href="#">Холодильники</a></li>
+                <li><a href="#">Посудомоечные машины</a></li>
+                <li><a href="#">Чайники</a></li>
+              </ul>
+              </li>
+              <li><a href="#" class="linkLeft">Мобильная техника</a></li>
+              <li><a href="#" class="linkLeft">Компьютеры</a></li>
+              <li><a href="#" class="linkLeft">Одежда</a></li>
+              <li><a href="#" class="linkLeft">Недвижимость</a></li>
             </ul>
             <div class="priсe">
-             <img src="image/iconexcel.png" class="excel">
+             <img src="image/iconexcel.png" alt="прайс" class="excel">
              <span class="price-list">Прайс-лист</span>   
             </div> 
         </aside>
-        <div class="centerBlock">
-                <div class="item"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
-                <div class="item"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
-                <div class="item_right"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
-                <div class="item"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
-                <div class="item"><img src="image/nophoto.png" class="noPhoto">
-                <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" class="Shopping_Cart"></div>
-            <ul class="pagination">
-               <li><a href="#">1</a></li>
-               <li><a href="#">2</a></li>
-               <li><a href="#">3</a></li>
-               <li><a href="#">4</a></li>
-               <li><a href="#">5</a></li>
-               <li><a href="#">6</a></li>
-               <li><a href="#">7</a></li>
-            </ul>
+          <div class="centerBlock">
+            <div class="item"><img src="image/nophoto.png" alt="товар" class="noPhoto">
+            <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" alt="корзина" class="Shopping_Cart"></div>
+            <div class="item"><img src="image/nophoto.png" alt="товар" class="noPhoto">
+            <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" alt="корзина" class="Shopping_Cart"></div>
+            <div class="item_right"><img src="image/nophoto.png" alt="товар" class="noPhoto">
+            <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" alt="корзина" class="Shopping_Cart"></div>
+            <div class="item"><img src="image/nophoto.png" alt="товар" class="noPhoto">
+            <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" alt="корзина" class="Shopping_Cart"></div>
+            <div class="item"><img src="image/nophoto.png" alt="товар" class="noPhoto">
+            <p>Самый клевый чайник, который надо купить!</p><p class="cost">1 900 p.</p><img src="image/Shopping_Cart.png" alt="корзина" class="Shopping_Cart"></div>
+              <ul class="pagination">
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#">6</a></li>
+                <li><a href="#">7</a></li>
+              </ul>
             <hr class="line">
-            <div class="textLeft">
-                Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. </div>
-                <div class="textRight">Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</div>
-        </div>
+            <div class="textLeft">Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. </div>
+            <div class="textRight">Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</div>
+            </div>
      </div>
    </section>
-    <footer>
-      <div class="block_footer">
+     <footer>
+       <div class="block_footer">
        <div class="company_footer">© 2012–2013 ЗАО «Компания» 
-           <a href="mailto:info@name.ru" class="mail">info@name.ru</a>
+         <a href="mailto:info@name.ru" class="mail">info@name.ru</a>
        </div>
        <ul class="link_footer">
-           <li><a href="#">Главная</a></li>
-           <li><a href="#">Каталог</a></li>
-           <li><a href="#">Доставка и оплата</a></li>
-           <li><a href="#">Прайс-лист</a></li>
-           <li><a href="#">Контакты</a></li>
+         <li><a href="#">Главная</a></li>
+         <li><a href="#">Каталог</a></li>
+         <li><a href="#">Доставка и оплата</a></li>
+         <li><a href="#">Прайс-лист</a></li>
+         <li><a href="#">Контакты</a></li>
        </ul>
        <div class="pixel_footer">
-          <img src="image/company.png">
-           <a href="#"><span>Разработка сайта —</span> компания «Пиксель Плюс»</a>
+          <img src="image/company.png" alt="логотип компании">
+          <a href="#"><span>Разработка сайта —</span> компания «Пиксель Плюс»</a>
        </div>
-        </div>
-    </footer>   
+       </div>
+    </footer>
+    <script src="test1.js"></script>   
 </body>
 </html>
