--- a/example1/test1.html
+++ b/example1/test1.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <script src="jquery-1.7.2.min.js"></script>
-<script src='jquery.js' defer></script>
+<script src='feedback.js' defer></script>
 </head>
   <body>
    <header>
